--- a/Bignumber.html
+++ b/Bignumber.html
@@ -6,8 +6,8 @@
 	<body>
 			<h1>Big Number Program</h1>
 			<script>
-			var m=95
-			var s=92
+			var m=90
+			var s=90
 			var a=89
 			if(m > s && m > a){
 			document.write("Matin is BIG");
@@ -15,10 +15,12 @@
 			document.write("Showkat is BIG");
 			}else if(a > m && a > s){
 			document.write("Arfin is BIG");
+			}
+			else if(m == s & m > a){
+			document.write("Matin & Showkat is Equal");
 			}else{
 			document.write("All are Equal")
 			}
-			
 			
 			</script>
 	</body>
