--- a/30.10.2018/public_html/odd-even.html
+++ b/30.10.2018/public_html/odd-even.html
@@ -11,12 +11,12 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
+    <body bgcolor=lightpink>
         <script>
             var sum = 0;
             function makeSum(sn, en) {
                 for (sn; sn <= en; sn++) {
-                    if (sn += 4){
+                    if (sn <= 5){
                         document.write("Number:" +sn+ "<br/>");
 
                     }
